@@ -6,17 +6,7 @@
  * User Manual available at https://docs.gradle.org/5.6.1/userguide/java_library_plugin.html
  */
  
-buildscript {
-    dependencies {
-        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.7.0'
-        classpath 'org.openjfx:javafx:11'
-    }
-    repositories {
-        mavenLocal()
-        mavenCentral()
 
-    }
-}
 
 
 plugins {
@@ -25,18 +15,23 @@ plugins {
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.0.8'
   id "org.beryx.jlink" version "2.9.4"
+
 	
 }
+
+
+
 repositories {
-	jcenter()
     mavenCentral()
 }
+
 java {
 	sourceCompatibility = JavaVersion.VERSION_11
 	targetCompatibility = JavaVersion.VERSION_11
 }
+
 javafx {
-    version = "11"
+    version = "13"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.graphics' ]
 }
 
@@ -44,21 +39,21 @@ dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     implementation 'org.openjfx:javafx:11'
 	compile group: 'org.openjfx', name: 'javafx', version: '11.0.2'
+
+
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
+	
 	testCompile 'org.testfx:testfx-junit:4.0+'
 	
-    testCompile "junit:junit:4.13-beta-3"
 
+    testCompile "junit:junit:4.13-beta-3"
+    
     testImplementation("junit:junit:4.13")
     testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.6.0")
 
-    
-
 
 }
-
-
 
 jar {
 	manifest {
@@ -71,17 +66,6 @@ jar {
     }
 }
 
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
-        ]
-        println options.compilerArgs
-    }
-
-}
-
 
 test {
 	useJUnitPlatform()
@@ -90,5 +74,4 @@ test {
 	}
 }
 
-
-mainClassName = 'com.venn.Main'
+mainClassName = 'Main'
